finally figured out the text box border issues!